fixing double scroll bar issue

--- a/applitrackerproject/src/components/Dashboard.css
+++ b/applitrackerproject/src/components/Dashboard.css
@@ -1,3 +1,10 @@
+/* Global styles */
+html, body {
+  height: 100%;
+  margin: 0; /* Removes default browser margin */
+  overflow: hidden; /* Prevents scroll on the body itself */
+}
+
 .dashboard {
   display: flex;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -9,7 +16,7 @@
 /* Main content area styles */
 .dashboard-main {
   flex-grow: 1;
-  padding: 20px;
+  padding: 0 20px 20px;
   overflow-y: auto;
   background-image: url('./img/bg.png');
   /* background-image: 
